# miseo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: error.rs  main.rs
src/cli/: app.rs  mod.rs
src/cli/commands/: install.rs  mod.rs  uninstall.rs  upgrade.rs
src/cli/output/: mod.rs  terminal.rs  test.rs  ui.rs
src/fs/: mod.rs  unix.rs  windows.rs
src/mise/: cli.rs  mod.rs  test.rs
src/spec/: backend.rs  mod.rs  runtime.rs  tool.rs
src/tasks/: install.rs  mod.rs  uninstall.rs  upgrade.rs
src/workspace/: manifest.rs  mod.rs
